[gd_scene load_steps=18 format=2]

[ext_resource path="res://particles/flame_particle_pass.tres" type="QuadMesh" id=1]
[ext_resource path="res://scenes/FireArea.gd" type="Script" id=2]
[ext_resource path="res://scenes/fire.gd" type="Script" id=3]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.550388, 0.751938, 1 )
colors = PoolColorArray( 0.866211, 0, 0, 1, 0.818359, 0.103829, 0, 1, 0.791016, 0.409789, 0, 1, 0.908203, 0.805958, 0.063858, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.927632, 0.65 ), -1.12273, -1.12273, 0, 0, Vector2( 1, 0.0681818 ), -1.99145, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.470455 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
lifetime_randomness = 0.31
trail_size_modifier = SubResource( 6 )
emission_shape = 1
emission_sphere_radius = 2.63
direction = Vector3( 0, 1, 0 )
gravity = Vector3( 0, 4.059, 0 )
initial_velocity = 4.31
tangential_accel = 0.27
angle = 45.0
angle_random = 0.41
scale = 0.65
scale_random = 0.3
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="Gradient" id=8]
colors = PoolColorArray( 0.125575, 0.125575, 0.125575, 1, 0.279297, 0.279297, 0.279297, 1 )

[sub_resource type="GradientTexture" id=9]
gradient = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=10]
lifetime_randomness = 0.31
emission_shape = 1
emission_sphere_radius = 2.63
direction = Vector3( 0, 1, 0 )
gravity = Vector3( 0, 4.638, 0 )
initial_velocity = 0.61
tangential_accel = 0.27
angle = 45.0
angle_random = 0.41
scale_random = 0.3
color_ramp = SubResource( 9 )

[sub_resource type="SpatialMaterial" id=11]
flags_unshaded = true
vertex_color_use_as_albedo = true
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id=12]
material = SubResource( 11 )

[sub_resource type="SphereShape" id=13]
radius = 3.51604

[sub_resource type="SphereShape" id=14]
radius = 0.894327

[node name="fire" type="Spatial"]
script = ExtResource( 3 )

[node name="FireParticles" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.0424, 0 )
amount = 256
lifetime = 2.02
visibility_aabb = AABB( -4, -21.0751, -4, 8, 42.1503, 8 )
process_material = SubResource( 7 )
draw_pass_1 = ExtResource( 1 )

[node name="SmokeParticles" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.0424, 0 )
amount = 190
lifetime = 1.47
process_material = SubResource( 10 )
draw_pass_1 = SubResource( 12 )

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.78167, 0 )
collision_layer = 16
collision_mask = 4096
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 13 )

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="SpreadTimer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[node name="Checker" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.68044, 0 )
monitorable = false
collision_layer = 0
collision_mask = 48

[node name="CollisionShape" type="CollisionShape" parent="Checker"]
shape = SubResource( 14 )

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="watered" from="Area" to="." method="_on_Area_watered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="timeout" from="SpreadTimer" to="." method="_on_SpreadTimer_timeout"]
